    * Build fixes when using older Heimdal Krb5 libs (e.g. 0.6.3).


o   William Jojo <jojowil@hvcc.edu>
    * BUG 3632: Fix for EISCON in open_any_socket_out() on AIX.


o   Taj Khattra <taj.khattra@gmail.com>
    * Fix missing lock count release in transaction cancel.


o   Herb Lewis <herb@samba.org>
    * Allow profiling level to be set on startup.


o   Jason Mader <jason@ncac.gwu.edu>
    * Various compile warning fixes. 
    * Initial patch set for strptime() in libreplace.


o   Jim McDonough <jmcd@us.ibm.com>
    * Fix the GPFS VFS module to pass the POSIX ACL tests (Thanks to
      Gomati Mohanan).


o   Stefan Metzmacher <metze@samba.org>
    * BUG 4496: Fix libreplace failure on ulibc systems.    
    * Merge numerous libreplace fixes from the SAMBA_4_0 code base 
      (stdint.h, stdbool.h, unsetenv, strptime(), strtoll(), et. al.).
    * Move ZERO_*, ARRAY_SIZE and PTR_DIFF macros into libreplace.


o   Lars Mueller <lmuelle@samba.org>
    * Log the reason for failures when not creating a core file on a
      crash due to restrictive permissions on the log file directory.


o   Jorge Santos <jorge_a_santos@hotmail.com>
    * BUG 4500: Fix compile bug in quota.c.


o   Simo Sorce <idra@samba.org>
    * Offline logon fixes in the idmap backend manager.
    * Cleanup initialization code in the sfu and rfc2307 nss_info
      plugins to protect against a crash if called before the idmap_ad
      module has been initialized.
    * Protect against crashes in get_dc_name() in the idmap_ad code
      when we are working offline.


Release Notes for older release follow:

      --------------------------------------------------
                   =================================
                   Release Notes for Samba 3.0.25rc1
                               Apr 9, 2007
                   =================================


######################################################################
Changes
#######

Changes since 3.0.25pre2